* BUG#9694 Make invoice against balance batch runnable
* BUG#9685 Use contract initial start date instead of contract start date while getting the invoice periods 
* BUG#9542 Prevent selection of contracts not entirely invoice by renewal batch
* BUG#9433 Fix cache setting / retrieval for future invoices
* BUG#9296 Retrieve the good period when recalculating the previous year premium
* BUG#8880 Recalculate premiums one day after termination
* BUG#9103 Filter premium lines when creating invoices if prorata is deactivated
* BUG#9094 Allow the rebill of a previous period
* BUG#9126 Do not try to invoice a contract without any billing informations
* BUG#9016 Change the value of the invoice address if the party attached to it is different to the invoice party
* FEA#8940 Add a batch to rebill contracts from a csv file
* BUG#8962 Initialize new future invoice amount with decimal
* BUG#8673 Do not select invoice with start date posterior to contract termination date in contract invoice post batch
* OTH#0000 Add check for existing billing informations on contract before proceeding with the initialization

Version 2.0 - 2018-04-13
* BUG#8646 Fix "Taxes included" boolean default visibility behaviour at coverage creation
* BUG#8547 Reactivate a void contract is based new on the contract start_date instead of its end_date
* BUG#8490 Fix searcher of contract invoices
* BUG#8461 Properly ignore cancelled invoices in contract invoicing batch
* BUG#8119 Manage contract without end date in get_future_invoices
* BUG#7987 Deletion / Cancellation of invoices when declining a quote
* BUG#7879 Fix behaviour of invoicing blocking which sometime caused duplicate invoices on a period
* BUG#7750 Fix non-synced billing period calculation
* OTH#0000 Make invoice line rounding behaviour easier to override
* OTH#0000 Fix contract invoice searcher following 4b8f11179
* FEA#7640 Block contract invoicing before a given date